--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.6",
+    "@google/genai": "^1.30.0",
+    "@mendable/firecrawl-js": "^4.8.3",
+    "axios": "^1.13.2",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
