--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@google/genai": "^1.30.0",
     "@mendable/firecrawl-js": "^4.8.3",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.7",
     "axios": "^1.13.2",
     "next": "^16.0.7",
     "react": "19.2.0",
