--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@google/genai": "^1.30.0",
     "@mendable/firecrawl-js": "^4.8.3",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.35.7",
     "@whop-apps/sdk": "^0.0.1-canary.117",
@@ -27,6 +29,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
+    "supabase": "^2.70.5",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
